fix z-index issue

--- a/src/styles/components/_preset-switcher.scss
+++ b/src/styles/components/_preset-switcher.scss
@@ -4,6 +4,7 @@
   right: 0;
   margin: 2rem;
   display: flex;
+  z-index: var(--z-modal);
 
   &__reset-button {
     width: 0;
